; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/vnic/extr_thunder_mdio.c_thunder_mdio_write.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/vnic/extr_thunder_mdio.c_thunder_mdio_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thunder_mdio_softc = type { i64 }

@MODE_IEEE_C22 = common dso_local global i64 0, align 8
@SMI_WR_DAT = common dso_local global i32 0, align 4
@SMI_WR_DAT_DAT_MASK = common dso_local global i32 0, align 4
@SMI_CMD_PHY_OP_C22_WRITE = common dso_local global i32 0, align 4
@SMI_CMD_PHY_OP_C45_WRITE = common dso_local global i32 0, align 4
@SMI_CMD_PHY_ADR_SHIFT = common dso_local global i32 0, align 4
@SMI_CMD_PHY_ADR_MASK = common dso_local global i32 0, align 4
@SMI_CMD_PHY_REG_ADR_SHIFT = common dso_local global i32 0, align 4
@SMI_CMD_PHY_REG_ADR_MASK = common dso_local global i32 0, align 4
@SMI_CMD = common dso_local global i32 0, align 4
@SMI_WR_DAT_PENDING = common dso_local global i32 0, align 4
@EIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32, i32)* @thunder_mdio_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @thunder_mdio_write(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.thunder_mdio_softc*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %14 = load i32, i32* %6, align 4
  %15 = call %struct.thunder_mdio_softc* @device_get_softc(i32 %14)
  store %struct.thunder_mdio_softc* %15, %struct.thunder_mdio_softc** %10, align 8
  %16 = load %struct.thunder_mdio_softc*, %struct.thunder_mdio_softc** %10, align 8
  %17 = load i64, i64* @MODE_IEEE_C22, align 8
  %18 = call i32 @thunder_mdio_set_mode(%struct.thunder_mdio_softc* %16, i64 %17)
  %19 = load %struct.thunder_mdio_softc*, %struct.thunder_mdio_softc** %10, align 8
  %20 = load i32, i32* @SMI_WR_DAT, align 4
  %21 = load i32, i32* %9, align 4
  %22 = load i32, i32* @SMI_WR_DAT_DAT_MASK, align 4
  %23 = and i32 %21, %22
  %24 = call i32 @mdio_reg_write(%struct.thunder_mdio_softc* %19, i32 %20, i32 %23)
  store i32 0, i32* %11, align 4
  %25 = load %struct.thunder_mdio_softc*, %struct.thunder_mdio_softc** %10, align 8
  %26 = getelementptr inbounds %struct.thunder_mdio_softc, %struct.thunder_mdio_softc* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = load i64, i64* @MODE_IEEE_C22, align 8
  %29 = icmp eq i64 %27, %28
  br i1 %29, label %30, label %34

30:                                               ; preds = %4
  %31 = load i32, i32* @SMI_CMD_PHY_OP_C22_WRITE, align 4
  %32 = load i32, i32* %11, align 4
  %33 = or i32 %32, %31
  store i32 %33, i32* %11, align 4
  br label %38

34:                                               ; preds = %4
  %35 = load i32, i32* @SMI_CMD_PHY_OP_C45_WRITE, align 4
  %36 = load i32, i32* %11, align 4
  %37 = or i32 %36, %35
  store i32 %37, i32* %11, align 4
  br label %38

38:                                               ; preds = %34, %30
  %39 = load i32, i32* %7, align 4
  %40 = load i32, i32* @SMI_CMD_PHY_ADR_SHIFT, align 4
  %41 = shl i32 %39, %40
  %42 = load i32, i32* @SMI_CMD_PHY_ADR_MASK, align 4
  %43 = and i32 %41, %42
  %44 = load i32, i32* %11, align 4
  %45 = or i32 %44, %43
  store i32 %45, i32* %11, align 4
  %46 = load i32, i32* %8, align 4
  %47 = load i32, i32* @SMI_CMD_PHY_REG_ADR_SHIFT, align 4
  %48 = shl i32 %46, %47
  %49 = load i32, i32* @SMI_CMD_PHY_REG_ADR_MASK, align 4
  %50 = and i32 %48, %49
  %51 = load i32, i32* %11, align 4
  %52 = or i32 %51, %50
  store i32 %52, i32* %11, align 4
  %53 = load %struct.thunder_mdio_softc*, %struct.thunder_mdio_softc** %10, align 8
  %54 = load i32, i32* @SMI_CMD, align 4
  %55 = load i32, i32* %11, align 4
  %56 = call i32 @mdio_reg_write(%struct.thunder_mdio_softc* %53, i32 %54, i32 %55)
  store i32 1000, i32* %13, align 4
  br label %57

57:                                               ; preds = %72, %38
  %58 = load i32, i32* %13, align 4
  %59 = icmp sgt i32 %58, 0
  br i1 %59, label %60, label %75

60:                                               ; preds = %57
  %61 = load %struct.thunder_mdio_softc*, %struct.thunder_mdio_softc** %10, align 8
  %62 = load i32, i32* @SMI_WR_DAT, align 4
  %63 = call i32 @mdio_reg_read(%struct.thunder_mdio_softc* %61, i32 %62)
  store i32 %63, i32* %12, align 4
  %64 = load i32, i32* %12, align 4
  %65 = load i32, i32* @SMI_WR_DAT_PENDING, align 4
  %66 = and i32 %64, %65
  %67 = icmp ne i32 %66, 0
  br i1 %67, label %68, label %70

68:                                               ; preds = %60
  %69 = call i32 @DELAY(i32 1000)
  br label %71

70:                                               ; preds = %60
  br label %75

71:                                               ; preds = %68
  br label %72

72:                                               ; preds = %71
  %73 = load i32, i32* %13, align 4
  %74 = add nsw i32 %73, -1
  store i32 %74, i32* %13, align 4
  br label %57

75:                                               ; preds = %70, %57
  %76 = load i32, i32* %13, align 4
  %77 = icmp sle i32 %76, 0
  br i1 %77, label %78, label %80

78:                                               ; preds = %75
  %79 = load i32, i32* @EIO, align 4
  store i32 %79, i32* %5, align 4
  br label %81

80:                                               ; preds = %75
  store i32 0, i32* %5, align 4
  br label %81

81:                                               ; preds = %80, %78
  %82 = load i32, i32* %5, align 4
  ret i32 %82
}

declare dso_local %struct.thunder_mdio_softc* @device_get_softc(i32) #1

declare dso_local i32 @thunder_mdio_set_mode(%struct.thunder_mdio_softc*, i64) #1

declare dso_local i32 @mdio_reg_write(%struct.thunder_mdio_softc*, i32, i32) #1

declare dso_local i32 @mdio_reg_read(%struct.thunder_mdio_softc*, i32) #1

declare dso_local i32 @DELAY(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
